Added degredation path for delicious includes

--- a/include/footer.html
+++ b/include/footer.html
@@ -3,6 +3,8 @@
 	</div>
 	<!-- YAHOO Global Object source file --> 
 	<script type="text/javascript" src="http://yui.yahooapis.com/2.3.0/build/yahoo/yahoo-min.js" ></script>
+	<script src="http://yui.yahooapis.com/2.7.0/build/event/event-min.js"></script>
+	<script src="http://yui.yahooapis.com/2.7.0/build/connection/connection-min.js"></script>
 	
 	<!-- StaPx source file --> 
 	<script type="text/javascript" src="<?=$sp->media_path?>include/behavior.js" ></script>
