moved front door to codeigniter style

--- a/include/footer.html
+++ b/include/footer.html
@@ -1,3 +1,6 @@
+<?php 
+	$sp = new SP();
+?>
 	<div id="footer">
 		<div><strong>&copy;&nbsp;2008&nbsp;StandardPixel LLC</strong>&nbsp;&nbsp;&nbsp;<a href="mailto:info@standardpixel.com">info@standardpixel.com</a></div>
 	</div>
