installed cached image urls

--- a/include/footer.html
+++ b/include/footer.html
@@ -10,6 +10,6 @@
 	<script src="http://yui.yahooapis.com/2.7.0/build/connection/connection-min.js"></script>
 	
 	<!-- StaPx source file --> 
-	<script type="text/javascript" src="<?=$sp->media_path?>include/behavior.js" ></script>
+	<script type="text/javascript" src="http://s.standardpixel.com.nyud.net:8080/j/include/behavior.js" ></script>
 </body>
 </html>
