style the ol resume

--- a/style_domestica_summer.css
+++ b/style_domestica_summer.css
@@ -82,7 +82,7 @@ a:hover {
 
 /* body */
 .domestica section {
-	padding:0 20px 0px 20px;
+	padding:20px;
 }
 .domestica section article {
 	padding:20px 0 5px 0;
