Update homepage header text
Change header to reference Laser Disks instead of social media curation.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,5 @@
 		</div>
 		<h2>Standard Pixel</h2>
 	</div>
-	<h1{% if page.header_style %} style="{{ page.header_style }}"{% endif %}>{% if page.header_text %}{{ page.header_text }}{% else %}Hello, I am Eric Gelinas. StandardPixel.com is where I showcase the many <i>things</i> which I "fave", "like", "+1", and otherwise curate online.{% endif %}</h1>
+	<h1{% if page.header_style %} style="{{ page.header_style }}"{% endif %}>{% if page.header_text %}{{ page.header_text }}{% else %}Hello, I am Eric Gelinas. StandardPixel.com is my website. A website is like TikTok for people who remember Laser Disks{% endif %}</h1>
 </header>
