Add RSS feed support
- Add jekyll-feed gem to Gemfile
- Enable jekyll-feed plugin in _config.yml
- Add feed meta tag to head for feed reader discovery
- Add RSS link to footer

RSS feed available at /feed.xml with full post content.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,6 @@
 	{% if page.layout == "post" %}
 	<link rel="canonical" href="{{ site.url }}{{ page.url }}" />
 	{% endif %}
+
+	{% feed_meta %}
 </head>
