Add 'paging your friends 911' to 90s references

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,8 @@
 		'floppy disks',
 		'Windows 95',
 		'Walkmans',
-		'calling 411 for information'
+		'calling 411 for information',
+		'paging your friends 911'
 	];
 
 	function getRandomItem(array) {
