--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 <footer>
-	<div class="cc-img"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" align="top" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a></div>
-	<div class="cc-text"><p><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">StandardPixel</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://standardpixel.com" property="cc:attributionName" rel="cc:attributionURL">Eric Gelinas</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>. <a href="{{ "/feed.xml" | relative_url }}">RSS</a></p></div>
+	<p>
+		<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/">
+			<img alt="Creative Commons License" style="border-width:0; vertical-align: middle; margin-right: 8px;" src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" />
+		</a>
+		Content by <a href="https://standardpixel.com">Eric Gelinas</a> is licensed under
+		<a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA 3.0</a>
+		&middot;
+		<a href="{{ "/feed.xml" | relative_url }}">RSS</a>
+	</p>
 </footer>
