--- a/style/style_domestica_summer.css
+++ b/style/style_domestica_summer.css
@@ -145,40 +145,64 @@ list-style:disc;
 }
 
 .domestica header #logo {
-	position:relative;
-	height:75px;
-	overflow:hidden;
-	width:215px;
-	margin:0;
-	margin-bottom:10px;
+	display: flex;
+	align-items: center;
+	gap: 24px;
+	margin: 0;
+	margin-bottom: 10px;
+	user-select: none;
 }
+
 .domestica header #logo .illustration {
-	position:absolute;
-	top:0px;
-	left:0;
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
 }
+
 .domestica header #logo .illustration div {
-	width:18px;
-	height:18px;
-	margin-top:1px;
-	border-radius:3px;
+	width: 20px;
+	height: 20px;
+	border-radius: 4px;
 }
-.domestica header #logo .illustration div.first {
-	margin-top:0;
+
+.domestica header #logo .illustration .block-1 {
+	background-color: #2563eb;
+	box-shadow: 0 1px 2px rgba(37, 99, 235, 0.2);
 }
-.domestica header #logo .illustration .block-1 {background-color:#0988A9;}
-.domestica header #logo .illustration .block-2 {background-color:rgba(118,118,118,1);}
-.domestica header #logo .illustration .block-3 {background-color:rgba(79,79,79,1);}
-.domestica header #logo .illustration .block-4 {background-color:rgba(28,28,28,1);}
-.domestica header #logo h2 {
-	font-size:47px;
-	font-weight:500;
-	padding:0;
-	margin: 0 0 0 28px;
-	position:absolute;
-	left:0;
-	top:0px;
-	line-height:40px;
+
+.domestica header #logo .illustration .block-2 {
+	background-color: rgba(148, 163, 184, 0.8);
+}
+
+.domestica header #logo .illustration .block-3 {
+	background-color: rgba(71, 85, 105, 0.9);
+}
+
+.domestica header #logo .illustration .block-4 {
+	background-color: #0f172a;
+}
+
+.domestica header #logo .logo-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	line-height: 1;
+}
+
+.domestica header #logo .logo-standard {
+	font-size: 36px;
+	font-weight: 700;
+	letter-spacing: -0.025em;
+	color: #0f172a;
+	margin-bottom: -4px;
+}
+
+.domestica header #logo .logo-pixel {
+	font-size: 36px;
+	font-weight: 300;
+	letter-spacing: 0.1em;
+	text-transform: uppercase;
+	color: #94a3b8;
 }
 
 /* body */
