--- a/style/style_domestica_summer.css
+++ b/style/style_domestica_summer.css
@@ -54,15 +54,18 @@ table {
 	margin:0;padding:0;
 }
 html, body.domestica {
-	font-family: helvetica,arial,sans-serif;
-	font-size:14px;
-	font-weight:normal;
-	color:#444;
-	margin:0 auto;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", system-ui, sans-serif;
+	font-size: 15px;
+	font-weight: 400;
+	color: #334155;
+	margin: 0 auto;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .domestica a {
-	text-decoration:none;
+	text-decoration: none;
+	color: #2563eb;
 }
 
 .domestica a:hover {
@@ -80,11 +83,13 @@ list-style:disc;
 }
 
 .domestica h1, .domestica h2, .domestica h3 {
-	font-size:24px;
-	font-weight:normal;
-	margin:0 0 10px 0;
-	padding:0;
-	font-family:"adobe-garamond-pro-1","adobe-garamond-pro-2",serif;
+	font-size: 24px;
+	font-weight: 600;
+	margin: 0 0 10px 0;
+	padding: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", system-ui, sans-serif;
+	letter-spacing: -0.015em;
+	color: #0f172a;
 }
 
 .domestica div, .domestica ul, .domestica li, .domestica span, .domestica section, .domestica article {
@@ -290,14 +295,14 @@ list-style:disc;
 }
 
 .domestica nav ul li {
-	display:inline-block;
-	width:24%;
-	max-width:24%;
-	height:100px;
-	vertical-align:top;
-	color:#aaa;
-	padding:10px;
-	margin:0 0 0 0;
+	display: inline-block;
+	width: 24%;
+	max-width: 24%;
+	height: 100px;
+	vertical-align: top;
+	color: #94a3b8;
+	padding: 10px;
+	margin: 0 0 0 0;
 	list-style-type: none;
 	border: solid 1px #fff;
 	border-radius: 3px;
@@ -326,16 +331,17 @@ list-style:disc;
 }
 
 .domestica nav ul li:hover {
-	color: #333;
+	color: #0f172a;
 	border: solid 1px transparent;
 	cursor: pointer;
 }
 
 .domestica nav ul li a {
-	font-size:24px;
-	color:#333;
-	font-family:"adobe-garamond-pro-1","adobe-garamond-pro",serif;
-
+	font-size: 22px;
+	font-weight: 600;
+	color: #0f172a;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", system-ui, sans-serif;
+	letter-spacing: -0.015em;
 }
 
 .domestica nav ul li:hover a {
@@ -381,13 +387,10 @@ list-style:disc;
 *  Begin Summer Color Theme for Domestica
 */
 .summer nav ul li:hover {
-	background-color: #0988A9;
-}
-.summer a {
-	color:#0988A9;
+	background-color: #2563eb;
 }
 .summer nav ul li:hover, .summer nav ul li:hover a {
-	color:#fff;
+	color: #fff;
 }
 
 /*
@@ -403,9 +406,11 @@ list-style:disc;
 
 .latest-post h3 {
 	font-size: 36px;
+	font-weight: 700;
 	margin-bottom: 10px;
-	color: #333;
+	color: #0f172a;
 	line-height: 1.3em;
+	letter-spacing: -0.025em;
 }
 
 @media (max-width: 768px) {
@@ -425,12 +430,12 @@ list-style:disc;
 }
 
 .latest-post h3 a {
-	color: #333;
+	color: #0f172a;
 	text-decoration: none;
 }
 
 .latest-post h3 a:hover {
-	color: #0988A9;
+	color: #2563eb;
 }
 
 .post-meta {
@@ -455,8 +460,11 @@ list-style:disc;
 
 .blog-archive h1 {
 	font-size: 42px;
+	font-weight: 700;
 	margin-bottom: 30px;
 	line-height: 1.3em;
+	letter-spacing: -0.025em;
+	color: #0f172a;
 }
 
 @media (max-width: 768px) {
@@ -495,7 +503,10 @@ list-style:disc;
 .archive-post h3 {
 	margin: 5px 0 10px 0;
 	font-size: 28px;
+	font-weight: 600;
 	line-height: 1.3em;
+	letter-spacing: -0.02em;
+	color: #0f172a;
 }
 
 .archive-post p {
@@ -527,8 +538,11 @@ list-style:disc;
 
 .post-header h1 {
 	font-size: 42px;
+	font-weight: 700;
 	margin-bottom: 10px;
 	line-height: 1.3em;
+	letter-spacing: -0.025em;
+	color: #0f172a;
 }
 
 .post-back-link {
