Add RSS feed for articles/links page
- articles.xml: Jekyll template generating RSS 2.0 from _data/articles.yml,
  items in reverse-chronological order with title, URL, date, and note
- head.html: <link rel="alternate"> tag on the articles page for feed discovery
- articles.html: visible RSS link next to the section heading

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,7 @@
 	{% endif %}
 
 	{% feed_meta %}
+	{% if page.url == "/articles.html" %}
+	<link rel="alternate" type="application/rss+xml" title="{{ site.title }} - Articles" href="{{ site.url }}/articles.xml">
+	{% endif %}
 </head>
