Make logo clickable on all pages to return to homepage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-	<div id='logo'{% if page.show_home_link %} onclick="document.location.href='/'"{% endif %}>
+	<div id='logo' onclick="document.location.href='/'">
 		<div class="illustration">
 			<div class="block-1 first"></div>
 			<div class="block-2"></div>
